Update website content

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- SHARED HEADER -->
   <div id="header-placeholder"></div>
 
-  <main>
+  <main id="main-content">
     <div class="home-content active">
       <!-- SLOGAN -->
       <div class="slogan">
