--- a/about-dachshunds.html
+++ b/about-dachshunds.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#ffffff">
   <title>Page Template Us - River Dachs Miniature Dachshunds</title>
 
   <link rel="stylesheet"
@@ -20,186 +21,6 @@
 
 
   <main>
-
-	  <!-- ==========================================================
-     MASTER PAGE TEMPLATE WITH ALL EXAMPLES
-     For testing + copying into real pages
-=========================================================== -->
-
-<!-- HEADER (your header.html include goes here) -->
-<!-- <?php include 'header.html'; ?>  or your system -->
-
-<!-- ==========================================================
-     PAGE TITLE EXAMPLES
-     Choose one of these blocks per page
-=========================================================== -->
-
-<!-- ----------------------------------------------------------
-     A) DEFAULT TITLE WITH DARK PAWS
------------------------------------------------------------ -->
-<!--
-<div class="page-title-bar">
-    <h1 class="page-title">Default Dark Paw Title</h1>
-</div>
--->
-
-<!-- ----------------------------------------------------------
-     B) LIGHT PAW VARIANT
------------------------------------------------------------ -->
-<!--
-<div class="page-title-bar page-title-bar--light">
-    <h1 class="page-title">Light Paw Title (Softer)</h1>
-</div>
--->
-
-<!-- ----------------------------------------------------------
-     C) ALTERNATING DARK + LIGHT PAWS
------------------------------------------------------------ -->
-<!--
-<div class="page-title-bar page-title-bar--alt">
-    <h1 class="page-title">Alternating Paw Title</h1>
-</div>
--->
-
-<!-- ----------------------------------------------------------
-     D) LONG-TITLE VERSION (use with any variant)
------------------------------------------------------------ -->
-<!--
-<div class="page-title-bar page-title-bar--alt">
-    <h1 class="page-title page-title--long">This Is A Longer Than Usual Page Title</h1>
-</div>
--->
-
-
-
-<!-- ==========================================================
-     PAGE CONTENT EXAMPLES
-     Several content layout examples follow.
-     Pick only the section style you want for each page.
-=========================================================== -->
-
-<!-- ----------------------------------------------------------
-     1) NORMAL INFORMATIONAL PAGE CONTENT
------------------------------------------------------------ -->
-<!--
-<div class="page-content">
-    <p>Welcome to your new puppy feeding guide. This page will explain
-    everything you need to know about feeding, schedule, tips, and more.</p>
-
-    <h2>How Often Should You Feed?</h2>
-    <p>Young puppies require structured feeding times…</p>
-
-    <h3>Recommended Schedule</h3>
-    <ul>
-        <li>8–12 weeks: 3–4 meals per day</li>
-        <li>3–6 months: 3 meals per day</li>
-        <li>6+ months: 2 meals per day</li>
-    </ul>
-
-    <p>Always ensure fresh water is available.</p>
-</div>
--->
-
-
-<!-- ----------------------------------------------------------
-     2) FAQ PAGE STYLE
------------------------------------------------------------ -->
-<!--
-<div class="page-content">
-    <div class="faq-list">
-
-        <div class="faq-item">
-            <div class="faq-question">How often should I feed my puppy?</div>
-            <div class="faq-answer">
-                <p>You should feed young puppies 3–4 meals per day…</p>
-            </div>
-        </div>
-
-        <div class="faq-item">
-            <div class="faq-question">What food do you recommend?</div>
-            <div class="faq-answer">
-                <p>I recommend a high-quality kibble formulated for small breeds…</p>
-            </div>
-        </div>
-
-        <div class="faq-item">
-            <div class="faq-question">Do you recommend supplements?</div>
-            <div class="faq-answer">
-                <p>Most puppies do not need supplements unless directed by a vet…</p>
-            </div>
-        </div>
-
-    </div>
-</div>
--->
-
-
-<!-- ----------------------------------------------------------
-     3) LEGAL / CONTRACT PAGE STYLE
------------------------------------------------------------ -->
-<!--
-<div class="page-content page-content--legal">
-
-    <h2>Purchase Agreement</h2>
-    <p>This contract is between the Buyer and Seller for the purchase of a
-    miniature dachshund puppy.</p>
-
-    <div class="section-heading">1. Parties</div>
-    <p>The buyer and seller identified above agree to the following terms…</p>
-
-    <div class="section-heading">2. Health Guarantee</div>
-    <ol>
-        <li>The seller warrants the puppy is healthy at the time of sale.</li>
-        <li>The buyer agrees to have the puppy examined by a veterinarian within 72 hours.</li>
-        <li>Additional terms may apply…</li>
-    </ol>
-
-    <div class="section-heading">3. Payment Terms</div>
-    <p>The buyer agrees to pay the purchase price in full before pickup…</p>
-
-</div>
--->
-
-
-<!-- ----------------------------------------------------------
-     4) PHOTO GALLERY PAGE STYLE
------------------------------------------------------------ -->
-<!--
-<div class="photo-page">
-    <div class="photo-grid">
-
-        <div class="photo-card">
-            <img src="images/puppy1.jpg" alt="Cream long-haired dachshund puppy">
-            <div class="photo-caption">Emma-Jean enjoying the grass</div>
-        </div>
-
-        <div class="photo-card">
-            <img src="images/puppy2.jpg" alt="Long-haired dachshund puppy">
-            <div class="photo-caption">Nap time!</div>
-        </div>
-
-        <div class="photo-card">
-            <img src="images/puppy3.jpg" alt="Puppy photo">
-            <div class="photo-caption">First steps outside</div>
-        </div>
-
-    </div>
-</div>
--->
-
-
-<!-- ==========================================================
-     FOOTER (your footer.html include goes here)
-=========================================================== -->
-<!-- <?php include 'footer.html'; ?> -->
-
-<!--	  <div class="page-title-bar page-title-bar--light">
-    <h1 class="page-title">Softer, More Formal Page</h1>
-</div> -->
-
-<!--	  <div class="page-title-bar"> -->
-<!--  <h1 class="page-title page-title--long">My Longer-Than-Usual Page Title</h1> -->
-<!-- </div> -->
 
 <!-- Alternating -->
 <div class="page-box">
@@ -291,7 +112,7 @@
   <div id="footer-placeholder"></div>
 
   <!-- LOAD SHARED HEADER + FOOTER -->
-  <script src="../assets/js/includes.js"></script>
+  <script src="assets/js/includes.js"></script>
 </body>
 </html>
 
